--- a/Fastrans/ui.ui
+++ b/Fastrans/ui.ui
@@ -19,7 +19,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLineEdit" name="lineEdit">
+  <widget class="QLineEdit" name="lineEdit_input">
    <property name="geometry">
     <rect>
      <x>20</x>
@@ -35,7 +35,7 @@
     </font>
    </property>
   </widget>
-  <widget class="QTextEdit" name="textEdit">
+  <widget class="QTextEdit" name="textEdit_result">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -63,7 +63,7 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QPushButton" name="pushButton_trans">
    <property name="geometry">
     <rect>
      <x>540</x>
@@ -108,20 +108,14 @@
     </property>
    </item>
   </widget>
-  <widget class="QCheckBox" name="checkBox">
+  <widget class="QPushButton" name="pushButton_theme">
    <property name="geometry">
     <rect>
-     <x>540</x>
+     <x>614</x>
      <y>20</y>
-     <width>141</width>
+     <width>71</width>
      <height>41</height>
     </rect>
-   </property>
-   <property name="sizePolicy">
-    <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-     <horstretch>0</horstretch>
-     <verstretch>0</verstretch>
-    </sizepolicy>
    </property>
    <property name="font">
     <font>
@@ -133,12 +127,15 @@
     <enum>Qt::RightToLeft</enum>
    </property>
    <property name="text">
-    <string>浅色模式</string>
+    <string>深色</string>
    </property>
    <property name="checkable">
     <bool>true</bool>
    </property>
    <property name="checked">
+    <bool>false</bool>
+   </property>
+   <property name="flat">
     <bool>false</bool>
    </property>
   </widget>
