--- a/Fastrans/ui.ui
+++ b/Fastrans/ui.ui
@@ -36,6 +36,10 @@
   <property name="windowTitle">
    <string>Fastrans</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>src/icon.ico</normaloff>src/icon.ico</iconset>
+  </property>
   <widget class="QLineEdit" name="lineEdit_input">
    <property name="geometry">
     <rect>
